[package]
name = "boilermates"
description = "A boilerplate generator for similar structs"
homepage = "https://github.com/ztorage/boilermates"
repository = "https://github.com/ztorage/boilermates"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
categories = ["development-tools", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
